--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://rogelio.mx
+url: http://rogeliog.github.io
 title: Learn Flight.js
 subtitle: The easiest place to learn Flight by examples
 author: Rogelio Guzman
