--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://rogeliog.github.io
+url: http://learnflight.io
 title: Learn Flight.js
 subtitle: The easiest place to learn Flight by examples
 author: Rogelio Guzman
@@ -90,7 +90,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: learnflight
 disqus_show_comment_count: false
 
 # Google Analytics
