--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://learnflight.github.io
+url: http://learnflight.io
 title: Learn Flight.js
 subtitle: The easiest place to learn Flight by examples
 author: Rogelio Guzman
